// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1d2129;
}

.emotion-0 span {
  padding: 0 16px;
}

.emotion-1 {
  vertical-align: middle;
  border-style: solid;
  border-width: 0 0 1px 0;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Divider renders horizontal 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1d2129;
}

.emotion-0 span {
  padding: 0 16px;
}

.emotion-1 {
  vertical-align: middle;
  border-style: solid;
  border-width: 0 0 1px 0;
  width: 100%;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Divider renders vertical 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1d2129;
}

.emotion-0 span {
  padding: 0 16px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  border-width: 0 0 0 1px;
  border-image: initial;
  border-style: dashed;
  height: 1em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
  </div>
</DocumentFragment>
`;
